# solinv

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/solinv-cheat/: Cargo.toml
crates/solinv-cheat/src/: lib.rs
crates/solinv-cli/: Cargo.toml
crates/solinv-cli/src/: main.rs
crates/solinv-core/: Cargo.toml
crates/solinv-core/src/: lib.rs  trace.rs
crates/solinv-core/src/invariants/: account_swap.rs  bump_seed_canonicalization.rs  cpi_reentrancy.rs  cu_dos.rs  discriminator_skip.rs  mod.rs  owner_skip.rs  pda_forge.rs  realloc_race.rs  regression_tests.rs  signer_skip.rs  unchecked_math.rs  util.rs
crates/solinv-corpus/: Cargo.toml
crates/solinv-corpus/src/: account.rs  lib.rs
crates/solinv-disclose/: Cargo.toml
crates/solinv-disclose/src/: lib.rs
crates/solinv-fuzz/: Cargo.toml
crates/solinv-fuzz/src/: bytepoke.rs  capability.rs  differential.rs  lib.rs  state_coverage.rs
docs/: competitive-evaluation-vs-evm-stack.md  day3-bandit-allocation-policy.md  disclosure-template-generic.md  disclosure-template-immunefi.md  disclosure-template-sherlock.md  harness-pattern-raw-call.md  implementation-day1-crucible.md  implementation-day10-acceptance-test.md  implementation-day11-critique-response.md  implementation-day12-multi-trader-fixture.md  implementation-day13-owner-skip-unmask-CRITICAL-COMPLETE.md  implementation-day2-source-coverage.md  implementation-day3-crucible-internals.md  implementation-day4-solinv-fuzz-skeleton.md  implementation-day5-signer-skip.md  implementation-day6-owner-skip.md  implementation-day7-discriminator-skip.md  implementation-day8-pda-forge.md  implementation-day9-account-swap-critical-complete.md  klend-ix-inventory.md  phase2-day14-anchor-version-mismatch.md  phase2-day15-harness-raw-call-refactor.md  phase2-day16-raydium-amm-build.md  phase2-day17-klend-build.md  phase2-day18-raydium-harness-scaffold.md  phase2-day19-raydium-fixture-init.md  phase2-day20-raydium-triage.md  phase2-day21-raydium-extension.md  phase2-day22-klend-scaffold.md  phase2-day23-klend-lendingmarket.md  phase2-day24-klend-reserve.md  phase2-day25-klend-first-ix.md  phase2-day26-klend-init-reserve.md  phase2-day27-klend-config-patch.md  phase2-target-ranking.md  phase3-day34-unchecked-math-gate2.md  phase3-day38-cu-dos-gate2.md  phase4-day43-slumlord-result.md  phase4-day46-sanctum-unstake-depth-gated.md  phase4-day47-a1-dig.md  (+15 more)
docs/invariants/: README.md  account-swap.md  bump-seed-canonicalization.md  cpi-reentrancy.md  cu-dos.md  discriminator-skip.md  owner-skip.md  pda-forge.md  realloc-race.md  signer-skip.md  unchecked-math.md
examples/: target-scoring.example.toml  targets.phase4.toml
examples/escrow-demo/: Cargo.toml  README.md
examples/escrow-demo/fuzz/escrow/: Cargo.toml
examples/escrow-demo/fuzz/escrow/src/: main.rs
examples/escrow-demo/programs/escrow/: Cargo.toml
examples/escrow-demo/programs/escrow/src/: lib.rs
examples/klend-fuzz/: README.md
examples/klend-fuzz/fuzz/klend/: Cargo.toml
examples/klend-fuzz/fuzz/klend/src/: main.rs
examples/pinocchio-bench-fuzz/: README.md
examples/pinocchio-bench-fuzz/fuzz/amm-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/amm-buggy/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/amm-diff/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/amm-diff/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/matching/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/matching-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/matching-buggy/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/matching-diff/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/matching-diff/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/matching-pino/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/matching-pino/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/matching/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/oracle-diff/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/oracle-diff/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/oracle-pino-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/oracle-pino-buggy/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/perp-diff/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/perp-diff/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/refresh-diff/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/refresh-diff/src/: main.rs
examples/pinocchio-bench-fuzz/fuzz/vault-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/fuzz/vault-buggy/src/: main.rs
examples/pinocchio-bench-fuzz/programs/: anchor-w10-buggy-id.json  anchor-w11-buggy-id.json  anchor-w4-buggy-id.json  anchor-w8-buggy-id.json  anchor-w9-buggy-id.json  pinocchio-w11-buggy-id.json  pinocchio-w4-buggy-id.json
examples/pinocchio-bench-fuzz/programs/anchor-w10-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/programs/anchor-w10-buggy/src/: lib.rs
examples/pinocchio-bench-fuzz/programs/anchor-w11-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/programs/anchor-w11-buggy/src/: lib.rs
examples/pinocchio-bench-fuzz/programs/anchor-w4-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/programs/anchor-w4-buggy/src/: lib.rs
examples/pinocchio-bench-fuzz/programs/anchor-w8-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/programs/anchor-w8-buggy/src/: lib.rs
examples/pinocchio-bench-fuzz/programs/anchor-w9-buggy/: Cargo.toml
examples/pinocchio-bench-fuzz/programs/anchor-w9-buggy/src/: lib.rs
examples/raydium-amm-fuzz/: README.md
examples/raydium-amm-fuzz/fuzz/raydium_amm/: Cargo.toml
examples/raydium-amm-fuzz/fuzz/raydium_amm/src/: main.rs
examples/sanctum-unstake-fuzz/: README.md
examples/sanctum-unstake-fuzz/fuzz/sanctum-unstake/: Cargo.toml
examples/sanctum-unstake-fuzz/fuzz/sanctum-unstake/src/: main.rs
examples/slumlord-fuzz/: README.md
examples/slumlord-fuzz/fuzz/slumlord/: Cargo.toml
examples/slumlord-fuzz/fuzz/slumlord/src/: main.rs
scripts/: aggregate_bandit_metrics.sh  append_bandit_snapshot.sh  bandit_decide.sh  recommend_bandit_allocation.sh  render_bandit_snapshot.sh  run_day3_checkpoint.sh
(+13 files in other folders)
