[workspace]
resolver = "2"
members = [
    "crates/solinv-core",
    "crates/solinv-fuzz",
    "crates/solinv-cheat",
    "crates/solinv-corpus",
    "crates/solinv-disclose",
    "crates/solinv-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["psyto <saito.hiroyuki@gmail.com>"]
repository = "https://github.com/psyto/solinv"
license = "Apache-2.0"
publish = false   # the workspace is a fuzz framework + example harnesses, not a published crate

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }

# Host-side mainnet fetch (solinv-corpus account clone-and-mutate).
# Sync HTTP + base64 — host tooling only, does NOT touch the SBF build
# graph so it is independent of the Solana toolchain pins below.
ureq = { version = "2", features = ["json"] }
base64 = "0.22"

# Solana ecosystem — pinned to match Crucible v0.1.0 workspace
# Per docs/implementation-day3-crucible-internals.md Risk #7
anchor-lang = "1.0.1"
solana-account = "3"
solana-keypair = "3"
solana-pubkey = "3"
solana-instruction = "3.1"
solana-signer = "3"

# Crucible — solinv runs as plugin layer
# Pin to tag v0.1.0 per docs/research-crucible-integration.md
# (API stability disclaimer warns of pre-1.0 breakage)
crucible-fuzzer = { git = "https://github.com/asymmetric-research/crucible", tag = "v0.1.0" }
crucible-test-context = { git = "https://github.com/asymmetric-research/crucible", tag = "v0.1.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
