[package]
name = "amm_buggy_fuzz"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
crucible-fuzzer = { git = "https://github.com/asymmetric-research/crucible", tag = "v0.1.0" }
crucible-test-context = { git = "https://github.com/asymmetric-research/crucible", tag = "v0.1.0" }
solinv-fuzz = { path = "../../../../crates/solinv-fuzz" }
solinv-core = { path = "../../../../crates/solinv-core" }
solana-account = "3"
solana-keypair = "3"
solana-pubkey = "3"
solana-instruction = "3.1"
solana-signer = "3"
sha2 = "0.10"
arbitrary = { version = "1", features = ["derive"] }
ctrlc = "3.4"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
invariant_amm_buggy_smoke = []
invariant_k_non_decreasing_only = []        # catches Bug A
invariant_reserve_vault_consistent_only = [] # catches Bug B
