[package]
name = "matching_diff_fuzz"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Crucible — git deps matching the solinv-fuzz pin so this harness and
# solinv-fuzz both resolve to the same crucible-fuzzer instance.
crucible-fuzzer = { git = "https://github.com/asymmetric-research/crucible", tag = "v0.1.0" }
crucible-test-context = { git = "https://github.com/asymmetric-research/crucible", tag = "v0.1.0" }

# solinv path deps — the differential harness only needs the Crucible
# integration glue (HasContext); equivalence assertions are inline
# rather than going through solinv-core's generic invariants.
solinv-fuzz = { path = "../../../../crates/solinv-fuzz" }

# Solana types — pinned to the same workspace versions solinv uses.
solana-account = "3"
solana-keypair = "3"
solana-pubkey = "3"
solana-instruction = "3.1"
solana-signer = "3"
sha2 = "0.10"

# Crucible / LibAFL transitive deps
arbitrary = { version = "1", features = ["derive"] }
ctrlc = "3.4"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
# Differential mode invariants — each asserts a different aspect of
# anchor↔pinocchio equivalence under randomized input.
invariant_diff_smoke = []                  # all checks in one variant
invariant_diff_execution_parity_only = []  # both succeed XOR both fail
invariant_diff_state_equivalent_only = []  # post-state body bytes match
invariant_diff_sequence_match_only = []    # market.sequence increments identically
