[package]
name = "perp_diff_fuzz"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
crucible-fuzzer = { git = "https://github.com/asymmetric-research/crucible", tag = "v0.1.0" }
crucible-test-context = { git = "https://github.com/asymmetric-research/crucible", tag = "v0.1.0" }

solinv-fuzz = { path = "../../../../crates/solinv-fuzz" }

solana-account = "3"
solana-keypair = "3"
solana-pubkey = "3"
solana-instruction = "3.1"
solana-signer = "3"
sha2 = "0.10"

arbitrary = { version = "1", features = ["derive"] }
ctrlc = "3.4"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
invariant_perp_diff_smoke = []
invariant_perp_diff_execution_parity_only = []
invariant_perp_diff_state_equivalent_only = []
invariant_perp_diff_open_interest_match_only = []
invariant_perp_diff_margin_invariant_only = []
